.deprecated/kubernetes/accounting/firefly3/middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sablier-firefly3
  namespace: accounting
spec:
  plugin:
    sablier:
      group: firefly3
      # blocking:
      #   defaultTimeout: 10s
      dynamic:
        displayName: firefly3
        refreshFrequency: 5s
        showDetails: "true"
        theme: shuffle
      sablierUrl: http://sablier:10000 # Sends: /api/strategies/dynamic?display_name=Immich&group=jellyfin&refresh_frequency=5s&session_duration=180m&show_details=true&theme=shuffle
      sessionDuration: 120m
