.deprecated/kubernetes/accounting/firefly3/firefly3.yml
---
# Based on: https://github.com/firefly-iii/kubernetes/blob/main/kustomize/firefly-iii.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly3
  namespace: accounting
  labels:
    app: firefly3
    # sablier.enable: "true"
    # sablier.group: firefly3
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: firefly3
  template:
    metadata:
      labels:
        task: accounting
        app: firefly3
    spec:
      # Essential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/essential
                operator: In
                values:
                - "true"
      containers:
      - name: firefly3
        resources:
          # requests:
          #   cpu: 50m
          #   memory: 56Mi
          # limits:
          #   cpu: 200m
          #   memory: 256Mi
        image: fireflyiii/core:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: firefly3-data
          mountPath: /var/www/html/storage/upload
    

      volumes:
      - name: firefly3-data
        persistentVolumeClaim:
          claimName: firefly3-data-claim

---
apiVersion: v1
kind: Service
metadata:
  name: firefly3
  namespace: accounting
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8080
  selector:
    app: firefly3

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly3-https
  namespace: accounting
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "accounting-sablier-firefly3@kubernetescrd"
spec:
  tls:
  - secretName: firefly3-bas-tls
  rules:
  - host: firefly.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firefly3
            port:
              number: 80
